--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="theme-color" content="#000000">
+    <meta name="description" content="Автор: greycat20142017, назначение: портфолио>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +25,8 @@
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app. Для запуска приложения необходим JavaScript.
+      You need to enable JavaScript to run this app. Для запуска приложения необходим JavaScript.<br>
+      Статическую версию портфолио можно найти по адресу https://greycat20142017.github.io/pfstatic/
     </noscript>
     <div id="root"></div>
     <!--
