Перед внесением существенных изменений

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <body>
     <noscript>
       You need to enable JavaScript to run this app. Для запуска приложения необходим JavaScript.<br>
-      Статическую версию портфолио можно найти по адресу https://greycat20142017.github.io/pfstatic/
+      Статическую версию портфолио можно найти <a href="https://greycat20142017.github.io/pfstatic/" title="На самом деле здесь пока заглушка :-)"> здесь </a>
     </noscript>
     <div id="root"></div>
   </body>
